tests/samples/invalid/invalid_character_in_string.pn
const OK: [11]u8 = "hello\x07world";
const NOT_OK: [11]u8 = "helloworld";
